support multiple pmz

--- a/notebooks/iceberg_elucidation.ipynb
+++ b/notebooks/iceberg_elucidation.ipynb
@@ -8,6 +8,9 @@
    },
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
     "import copy\n",
     "import os\n",
     "import sys\n",
@@ -65,7 +68,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Global configs"
+    "# Global configs\n",
+    "Please modify the following paths/configs accordingly to your environment"
    ],
    "metadata": {
     "collapsed": false
@@ -162,9 +166,9 @@
     "\n",
     "    Args:\n",
     "        candidate_smiles: (list[str]) list of candidate SMILES\n",
-    "        collision_energies: (list[int]) list of collision energies\n",
+    "        collision_energies: (list[int]) list of collision energies. Could also be list[list[int]] for each candidate SMILES\n",
     "        nce: (bool, default=False) if True, the collision energies are treated as normalized collision energy; otherwise, they are treated as absolute eV\n",
-    "        adduct: (str, default='[M+H]+') adduct type\n",
+    "        adduct: (str, default='[M+H]+') adduct type. Could also be list[str] for each candidate SMILES\n",
     "        exp_name: (str, default='iceberg_elucidation') name of the experiment\n",
     "        python_path: (str) path to python executable\n",
     "        gen_ckpt: (str) path to ICEBERG generator model (model 1) checkpoint\n",
@@ -197,13 +201,19 @@
     "    assert isinstance(cuda_devices, str)\n",
     "\n",
     "    # check adduct type\n",
-    "    if not adduct in common.ion2mass:\n",
-    "        matches = get_close_matches(adduct, common.ion2mass.keys(), n=1, cutoff=0.7)\n",
-    "        if len(matches) > 0:\n",
-    "            raise ValueError(f'Unknown adduct {adduct}. Did you mean {matches[0]}? ')\n",
-    "        else:\n",
-    "            raise ValueError(f'Adduct type {adduct} is not supported. Supported adducts: '\n",
-    "                             f'{list(common.ion2mass.keys())}')\n",
+    "    if isinstance(adduct, str):\n",
+    "        adducts = [adduct] * len(candidate_smiles)\n",
+    "    else:\n",
+    "        adducts = adduct\n",
+    "    for adduct in adducts:\n",
+    "        if not adduct in common.ion2mass:\n",
+    "            matches = get_close_matches(adduct, common.ion2mass.keys(), n=1, cutoff=0.7)\n",
+    "            if len(matches) > 0:\n",
+    "                raise ValueError(f'Unknown adduct {adduct}. Did you mean {matches[0]}? ')\n",
+    "            else:\n",
+    "                raise ValueError(f'Adduct type {adduct} is not supported. Supported adducts: '\n",
+    "                                 f'{list(common.ion2mass.keys())}')\n",
+    "    assert len(adducts) == len(candidate_smiles)\n",
     "\n",
     "    # remove stereo\n",
     "    candidate_smiles = [common.rm_stereo(smi) for smi in candidate_smiles]\n",
@@ -212,29 +222,40 @@
     "    inchikeys = [common.inchikey_from_smiles(smi) for smi in candidate_smiles]\n",
     "    _, uniq_idx = np.unique(inchikeys, return_index=True)\n",
     "    candidate_smiles = np.array(candidate_smiles)[uniq_idx].tolist()\n",
+    "    adducts = np.array(adducts)[uniq_idx].tolist()\n",
     "\n",
     "    # get formula & mass & check candidate smiles\n",
-    "    precursor_mass = common.mass_from_smi(candidate_smiles[0]) + common.ion2mass[adduct]\n",
-    "    # formula check is skipped\n",
-    "    # formula = common.form_from_smi(candidate_smiles[0])\n",
-    "    for smi in candidate_smiles:\n",
-    "        cur_pm = common.mass_from_smi(smi) + common.ion2mass[adduct]\n",
-    "        if np.abs(precursor_mass - cur_pm) > precursor_mass * ppm * 1e-6:  # ppm diff\n",
-    "            raise ValueError(f'Precursor mass mismatch in input molecules. Got {smi}, mass={cur_pm}, expected mass={precursor_mass} inferred from {candidate_smiles[0]}')\n",
-    "        # if not formula == common.form_from_smi(smi):\n",
-    "        #     raise ValueError(f'Formula mismatch in input molecules. Got {smi}, form={common.form_from_smi(smi)}, expected form={formula} inferred from {candidate_smiles[0]}')\n",
+    "    # precursor_mass = common.mass_from_smi(candidate_smiles[0]) + common.ion2mass[adduct]\n",
+    "    # # formula check is skipped\n",
+    "    # # formula = common.form_from_smi(candidate_smiles[0])\n",
+    "    # for smi in candidate_smiles:\n",
+    "    #     cur_pm = common.mass_from_smi(smi) + common.ion2mass[adduct]\n",
+    "    #     if np.abs(precursor_mass - cur_pm) > precursor_mass * ppm * 1e-6:  # ppm diff\n",
+    "    #         raise ValueError(f'Precursor mass mismatch in input molecules. Got {smi}, mass={cur_pm}, expected mass={precursor_mass} inferred from {candidate_smiles[0]}')\n",
+    "    #     # if not formula == common.form_from_smi(smi):\n",
+    "    #     #     raise ValueError(f'Formula mismatch in input molecules. Got {smi}, form={common.form_from_smi(smi)}, expected form={formula} inferred from {candidate_smiles[0]}')\n",
     "\n",
     "    # handle collision energies, convert all nce to ev\n",
     "    collision_energies = [float(e) for e in collision_energies]\n",
-    "    if nce:\n",
-    "        collision_energies = [common.nce_to_ev(e, precursor_mass) for e in collision_energies]\n",
-    "    collision_energies = [f'{_:.0f}' for _ in sorted(collision_energies)]\n",
+    "    new_collision_energies = []\n",
+    "    precursor_masses = []\n",
+    "    for cand_smi in candidate_smiles:\n",
+    "        precursor_mass = common.mass_from_smi(cand_smi) + common.ion2mass[adduct]\n",
+    "        precursor_masses.append(precursor_mass)\n",
+    "        if nce:\n",
+    "            ce = [common.nce_to_ev(e, precursor_mass) for e in collision_energies]\n",
+    "        else:\n",
+    "            ce = collision_energies\n",
+    "        new_collision_energies.append([f'{_:.0f}' for _ in sorted(ce)])\n",
+    "    collision_energies = new_collision_energies\n",
     "\n",
     "    # generate temp directory\n",
-    "    param_str = exp_name + '||' + ';'.join(sorted(candidate_smiles)) + '||' + str(common.ion2onehot_pos[adduct]) + \\\n",
-    "                '||' + ';'.join(collision_energies) + '||' + str(gen_ckpt.absolute()) + '||' + str(inten_ckpt.absolute()) + \\\n",
-    "                '||' + cuda_devices + '||' + f'{batch_size:d}-{num_workers:d}-{sparse_k:d}-{max_nodes:d}||' + f'{threshold:.2f}' + \\\n",
-    "                '||' + ('binned_out' if binned_out else \"\")\n",
+    "    param_str = exp_name + '|'\n",
+    "    for cand_smi, adduct, ce in sorted(zip(candidate_smiles, adducts, collision_energies)):\n",
+    "        param_str += '|' + cand_smi + ';' + str(common.ion2onehot_pos[adduct]) + ';' + ','.join(sorted(ce))\n",
+    "    param_str += '||' + str(gen_ckpt.absolute()) + '||' + str(inten_ckpt.absolute()) + '||' + cuda_devices + \\\n",
+    "                 '||' + f'{batch_size:d}-{num_workers:d}-{sparse_k:d}-{max_nodes:d}||' + f'{threshold:.2f}' + \\\n",
+    "                 '||' + ('binned_out' if binned_out else \"\")\n",
     "    param_hash = blake2b(param_str.encode(\"ascii\"), digest_size=16).hexdigest()\n",
     "    save_dir = Path(user_cache_dir(f\"ms-pred/iceberg-elucidation/{param_hash}\"))\n",
     "    save_dir.mkdir(parents=True, exist_ok=True)\n",
@@ -247,10 +268,10 @@
     "    if not (save_dir / 'iceberg_run_successful').exists():\n",
     "        # write candidates to tsv\n",
     "        entries = []\n",
-    "        for smi in candidate_smiles:\n",
+    "        for cand_smi, adduct, ce, pmz in zip(candidate_smiles, adducts, collision_energies, precursor_masses):\n",
     "            entries.append({\n",
-    "                'spec': exp_name, 'smiles': smi, 'ionization': adduct, 'inchikey': common.inchikey_from_smiles(smi), 'precursor': precursor_mass,\n",
-    "                'collision_energies': collision_energies,\n",
+    "                'spec': exp_name, 'smiles': cand_smi, 'ionization': adduct, 'inchikey': common.inchikey_from_smiles(cand_smi),\n",
+    "                'precursor': pmz, 'collision_energies': ce,\n",
     "            })\n",
     "        df = pd.DataFrame.from_dict(entries)\n",
     "        df.to_csv(save_dir / f'cands_df_{exp_name}.tsv', sep='\\t', index=False)\n",
@@ -276,6 +297,10 @@
     "        run_result = subprocess.run(cmd, shell=True)\n",
     "        if run_result.returncode == 0:  # successful\n",
     "            (save_dir / 'iceberg_run_successful').touch()\n",
+    "\n",
+    "    precursor_mass = np.unique(np.array(precursor_masses).round(decimals=6))\n",
+    "    if len(precursor_mass) == 1:\n",
+    "        precursor_mass = precursor_mass.item()\n",
     "\n",
     "    return save_dir, precursor_mass\n",
     "\n",
@@ -397,6 +422,7 @@
     "    topk:int=10,\n",
     "    ppm:int=20,\n",
     "    num_bins:int=15000,\n",
+    "    ignore_precursor:bool=True,\n",
     "    **kwargs,\n",
     "):\n",
     "    \"\"\"\n",
@@ -414,6 +440,7 @@
     "        topk: (int, default=10) number of candidates returned\n",
     "        ppm: (int, default=20) parts-per-million threshold for mass comparison\n",
     "        num_bins: (int, default=15000) number of bins for binned spectrum\n",
+    "        ignore_precursor: (bool, default=True) ignore precursor peak\n",
     "\n",
     "    Returns: list of TopK molecules:\n",
     "        [ (top1 SMILES, entropy distance, true molecule or not),\n",
@@ -423,6 +450,8 @@
     "        ]\n",
     "\n",
     "    \"\"\"\n",
+    "    assert isinstance(precursor_mass, float)\n",
+    "\n",
     "    real_spec = load_real_spec(real_spec, real_spec_type, precursor_mass, nce, ppm)\n",
     "    smiles, pred_specs, pred_frags = load_pred_spec(load_dir, step_collision_energy)\n",
     "\n",
@@ -439,9 +468,8 @@
     "        target_inchikey = None\n",
     "\n",
     "    # compute distance\n",
-    "    ## !!!!!!!TODO\n",
-    "    # dist = entropy_dist_bin(pred_binned_specs, real_binned, ignore_peak=(precursor_mass - 1) * 10, sparse=False)\n",
-    "    dist = emd_dist_bin(pred_binned_specs, real_binned, ignore_peak=(precursor_mass - 1) * 10, sparse=False)\n",
+    "    dist = entropy_dist_bin(pred_binned_specs, real_binned, ignore_peak=(precursor_mass - 1) * 10 if ignore_precursor else None, sparse=False)\n",
+    "    # dist = emd_dist_bin(pred_binned_specs, real_binned, ignore_peak=(precursor_mass - 1) * 10, sparse=False)\n",
     "\n",
     "    sorted_indices = np.argsort(dist)\n",
     "\n",
@@ -452,7 +480,7 @@
     "        smi = smiles[idx]\n",
     "        inchikey = common.inchikey_from_smiles(smi)\n",
     "        if target_inchikey is not None and inchikey in target_inchikey:\n",
-    "            print((f'[{mol_name}] ' if len(mol_name) > 0 else \"\") + f'Found target mol at {rnk+1}/{len(sorted_indices)+1}, ent_dist={d:.3f}')\n",
+    "            print((f'[{mol_name}] ' if len(mol_name) > 0 else \"\") + f'Found target mol at {rnk+1}/{len(sorted_indices)}, ent_dist={d:.3f}')\n",
     "            found_true = True\n",
     "            true_idx = idx\n",
     "        if idx >= topk and found_true:\n",
@@ -546,7 +574,7 @@
     "    for ce in sorted(real_spec.keys()):\n",
     "        pred_spec = pred_specs[idx][ce]\n",
     "        pred_frag = pred_frags[idx][ce]\n",
-    "        common.plot_compare_ms(real_spec[ce], pred_spec, 'experiment', 'predicted',  f'collision energy {ce}eV', dpi=1000)  # changed for pdf view. was dpi=500\n",
+    "        common.plot_compare_ms(real_spec[ce], pred_spec, 'experiment', 'predicted',  f'collision energy {ce}eV', dpi=500)  # changed for pdf view. was dpi=500\n",
     "\n",
     "        plt.gca().set_ylim(-1.1, 1.1)\n",
     "\n",
@@ -559,10 +587,10 @@
     "            frag_img = np.concatenate((np.array(frag_img), 255 * np.ones((frag_img.size[0], frag_img.size[1], 1), dtype=np.int8)), axis=-1)\n",
     "            frag_img = np.where(((frag_img[:, :, :3] == np.array([255, 255, 255])[None, None, :]).sum(axis=-1) == 3)[:, :, None],\n",
     "                                  np.zeros_like(frag_img), frag_img) # make white background transparent\n",
-    "            imagebox = OffsetImage(frag_img, zoom = 0.05)  # changed for pdf view. was zoom=0.2\n",
-    "            ab = AnnotationBbox(imagebox, (mz, - inten - 0.05), frameon = False)  # changed for pdf view. was -0.1\n",
+    "            imagebox = OffsetImage(frag_img, zoom = 0.1)  # changed for pdf view. was zoom=0.2\n",
+    "            ab = AnnotationBbox(imagebox, (mz, - inten - 0.1), frameon = False)  # changed for pdf view. was -0.1\n",
     "            plt.gca().add_artist(ab)\n",
-    "            plt.text(mz, - inten - 0.1, f'{mz:.3f}', fontsize=2) # changed for pdf view. was -0.2,font_size=5\n",
+    "            plt.text(mz, - inten - 0.2, f'{mz:.3f}', fontsize=4) # changed for pdf view. was -0.2,font_size=5\n",
     "            counter += 1\n",
     "            if counter >= num_peaks:\n",
     "                break"
@@ -699,7 +727,7 @@
     "\n",
     "        return img\n",
     "\n",
-    "pesticide_elucidation(feat_id_to_dict['5421'], True)"
+    "pesticide_elucidation(feat_id_to_dict['1505'], True)"
    ],
    "metadata": {
     "collapsed": false
@@ -737,15 +765,6 @@
     "for i in feat_id_to_dict.values():\n",
     "    print(i['feature_id'], i['adduct_to_smiles'])"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
@@ -1199,9 +1218,11 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "def broad_elucidation(spec_file, formula, real_smi=None, name=\"\", vis_peaks=False):\n",
+    "def broad_elucidation(spec_file, formula, real_smi=None, name=\"\", vis_peaks=False, **kwargs):\n",
     "    broad_config = copy.deepcopy(config)\n",
     "    broad_config['nce'] = True # use nce for collision energy\n",
+    "    for k, v in kwargs.items():\n",
+    "        broad_config[k] = v\n",
     "    exp_spec_path = f'/home/roger/ms_collaborators/broad-Julian/spec_files/{spec_file}.ms'\n",
     "\n",
     "    # Get candidates\n",
@@ -1220,7 +1241,7 @@
     "    if vis_peaks:\n",
     "        explain_peaks(result_path, exp_spec_path, pmz, real_smi, num_peaks=10, **broad_config)\n",
     "\n",
-    "    return img"
+    "    return img\n"
    ],
    "metadata": {
     "collapsed": false
@@ -1445,7 +1466,18 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "broad_elucidation('mxp4042', 'C17H32N4O4', r'CC[C@H](C)[C@@H](C(=O)N1CCC[C@H]1C(=O)N[C@@H](CCCCN)C(=O)O)N', 'Ile-Pro-Lys')"
+    "broad_elucidation('mxp4042', 'C17H32N4O4', r'CC[C@H](C)[C@@H](C(=O)N1CCC[C@H]1C(=O)N[C@@H](CCCCN)C(=O)O)N', 'Ile-Pro-Lys', True)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "broad_elucidation('QI8422', 'C17H32N4O4', 'CC(C)CC(C(=O)N1CCCC1C(=O)O)NC(=O)C(CCCCN)N', 'Unknown-Lys-Leu-Pro', True)"
    ],
    "metadata": {
     "collapsed": false
@@ -1470,19 +1502,32 @@
     "\n",
     "# Get candidates\n",
     "df = pd.read_csv('/home/roger/ms_collaborators/broad-Julian/24_0723_Compounds_to_generate_in_silico_MSMS.csv')\n",
+    "out_dir = Path('/home/roger/ms_collaborators/broad-Julian/foodbiomarker')\n",
+    "out_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "# fix formula mismatch\n",
     "for idx, row in df.iterrows():\n",
     "    df.at[idx, 'Chemical Formula'] = common.form_from_smi(row['SMILES'])\n",
     "\n",
-    "for formula in df['Chemical Formula'].unique():\n",
-    "    smiles = []\n",
-    "    for smi in df[df['Chemical Formula'] == formula]['SMILES']:\n",
-    "        smiles.append(common.rm_stereo(smi))\n",
+    "smiles = []\n",
+    "for idx, row in df.iterrows():\n",
+    "    smiles.append(common.rm_stereo(row['SMILES']))\n",
     "\n",
-    "    # Run ICEBERG to predict spectra\n",
-    "    print(formula)\n",
-    "    result_path, pmz = iceberg_prediction(smiles, [10, 20, 30, 40, 50], **broad_config)\n"
+    "result_path, pmz = iceberg_prediction(smiles, [10, 20, 30, 40, 50], **broad_config)\n",
+    "\n",
+    "smiles, pred_specs, pred_frags = load_pred_spec(result_path, False)\n",
+    "for smi, pred_spec in zip(smiles, pred_specs):\n",
+    "    inchikey = common.inchikey_from_smiles(smi)\n",
+    "    out_arr = np.zeros((0, 3))\n",
+    "    for ev, spec in pred_spec.items():\n",
+    "        spec[:, 1] *= 100\n",
+    "        out_arr = np.concatenate(\n",
+    "            (out_arr,\n",
+    "             np.concatenate((spec, np.ones((spec.shape[0], 1)) * float(ev)), axis=-1)),\n",
+    "            axis=0\n",
+    "        )\n",
+    "    df = pd.DataFrame(data=out_arr, columns=['m/z', 'inten', 'ev'])\n",
+    "    df.to_csv(out_dir / f'{inchikey}.csv', index=False)\n"
    ],
    "metadata": {
     "collapsed": false
