tweaking paths in iceberg_elucidation.ipynb for molgpu

--- a/notebooks/iceberg_elucidation.ipynb
+++ b/notebooks/iceberg_elucidation.ipynb
@@ -50,7 +50,10 @@
    },
    "source": [
     "# Global configs\n",
-    "Please modify the following paths/configs accordingly"
+    "Please modify the following paths/configs accordingly; for `pythonpath` on molgpu, you can either\n",
+    "1) set up your own ms-gen environment from source \n",
+    "2) use Mrunali's pre-built environment, after telling conda to look in my folder with `conda config --add envs_dirs /home/mrunali/miniconda3/envs`\n",
+    "3) Clone Mrunali's pre-built environment into your own environment with `conda --clone` and then source that instead. "
    ]
   },
   {
@@ -65,10 +68,10 @@
    "outputs": [],
    "source": [
     "config = dict(\n",
-    "    python_path='/home/roger/miniforge3/envs/ms-main/bin/python',\n",
-    "    gen_ckpt='/home/roger/ms-models/iceberg_results_20240630/dag_nist20/split_1_rnd1/version_0/best.ckpt',\n",
-    "    inten_ckpt='/home/roger/ms-models/iceberg_results_20240630/dag_inten_nist20/split_1_rnd1/version_0/best.ckpt',\n",
-    "    cuda_devices=0,\n",
+    "    python_path='/home/mrunali/miniconda3/envs/ms-gen/bin/python',\n",
+    "    gen_ckpt='/home/runzhong/ms-models/iceberg_results_20240630/dag_nist20/split_1_rnd1/version_0/best.ckpt',\n",
+    "    inten_ckpt='/home/runzhong/ms-models/iceberg_results_20240630/dag_inten_nist20/split_1_rnd1/version_0/best.ckpt',\n",
+    "    cuda_devices=1,\n",
     "    batch_size=8,\n",
     "    num_workers=6,\n",
     "    sparse_k=100,\n",
@@ -240,6 +243,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# write feature matchings for analysis\n",
@@ -255,19 +261,16 @@
     "all_candidates['matched features'] = row_to_match\n",
     "all_candidates.to_csv(candidates_csv + '2', index=False)\n",
     "all_candidates"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Run ICEBERG prediction"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "### Run ICEBERG prediction"
+   ]
   },
   {
    "cell_type": "code",
@@ -354,15 +357,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# Run sirius\n",
     "feature_id_to_form = form_from_mgf(inp_mgf)\n",
     "feature_id_to_form['2171']"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -1087,16 +1090,19 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "Visualize the real spectrum difference (small-scale molecular networking)"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "Visualize the real spectrum difference (small-scale molecular networking)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "import itertools\n",
@@ -1162,10 +1168,7 @@
     "    plt.plot((x1, x2), (y1, y2), '--', c=colors[id1, id2], linewidth=0.5)\n",
     "    plt.text((x1 + x2) / 2, (y1 + y2) / 2, f\"{dissim_mat[id1, id2]:.3f}\", fontsize=5)\n",
     "plt.axis('off')"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1226,9 +1229,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ms-main",
+   "display_name": "ms-gen",
    "language": "python",
-   "name": "ms-main"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1240,7 +1243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
