--- a/notebooks/iceberg_neu_foodome.ipynb
+++ b/notebooks/iceberg_neu_foodome.ipynb
@@ -207,19 +207,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "outputs": [],
-   "source": [
-    "with open(out_dir / 'candidates.smi') as f:\n",
-    "    smiles = f.readlines()\n",
-    "smiles = [smi.strip('\\n') for smi in smiles]"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
    "id": "a496c635",
    "metadata": {
@@ -309,7 +296,7 @@
     }
    ],
    "source": [
-    "# Run prediction\n",
+    "# Run prediction. It's run remotely on molgpu\n",
     "enu_config = copy.deepcopy(config)\n",
     "\n",
     "result_path, pmz = iceberg_prediction(smiles, [45], **enu_config)"
@@ -317,48 +304,238 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "outputs": [],
-   "source": [
-    "new_smiles = common.sanitize(smiles, 'smi')"
+   "execution_count": 18,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 84425/84425 [00:20<00:00, 4135.00it/s]\n"
+     ]
+    }
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "outputs": [],
-   "source": [
-    "smiles = new_smiles"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [],
    "source": [
     "# parse spectrum\n",
-    "\n",
-    "\n",
-    "\n",
-    "smiles, pred_specs, pred_frags = load_pred_spec(result_path, False)\n",
+    "# result_path: path to hdf5 file\n",
+    "out_dir = Path('/home/roger/ms_collaborators/NEU-Foodome/foodome')\n",
+    "smiles, pred_specs, pred_frags = load_pred_spec(out_dir, False)\n",
+    "meta_spec_list = []\n",
     "for smi, pred_spec in zip(smiles, pred_specs):\n",
-    "    inchikey = common.inchikey_from_smiles(smi)\n",
-    "    out_arr = np.zeros((0, 3))\n",
+    "    pmass = common.mass_from_smi(smi) + common.ion2mass['[M+H]+']\n",
     "    for ev, spec in pred_spec.items():\n",
     "        spec[:, 1] *= 100\n",
-    "        out_arr = np.concatenate(\n",
-    "            (out_arr,\n",
-    "             np.concatenate((spec, np.ones((spec.shape[0], 1)) * float(ev)), axis=-1)),\n",
-    "            axis=0\n",
-    "        )\n",
-    "    df = pd.DataFrame(data=out_arr, columns=['m/z', 'inten', 'ev'])\n",
-    "    df.to_csv(out_dir / f'{inchikey}.csv', index=False)\n"
+    "        meta = {\n",
+    "            'PEPMASS': pmass,\n",
+    "            'SMILES': smi,\n",
+    "            'IKEY': common.inchikey_from_smiles(smi),\n",
+    "            'COLLISION_ENERGY': ev,\n",
+    "        }\n",
+    "        meta_spec_list.append((meta, [('spec', spec)]))\n",
+    "\n",
+    "mgf_outstr = common.build_mgf_str(meta_spec_list)\n",
+    "\n",
+    "with open(out_dir / 'NDM_compound_pred.mgf', 'w') as f:\n",
+    "    f.write(mgf_outstr)\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Known compounds 20250319"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 728/728 [00:01<00:00, 530.98it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "length of smiles: 688\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('/home/roger/ms_collaborators/NEU-Foodome/foodb_selected_compounds.csv')\n",
+    "\n",
+    "smiles = []\n",
+    "energies = []\n",
+    "ikeys = []\n",
+    "for idx, row in tqdm(df.iterrows(), total=df.shape[0]):\n",
+    "    smi = row['canonical_smiles']\n",
+    "    ce = row['collision_energy(ev)']\n",
+    "    if type(smi) != str:\n",
+    "        continue\n",
+    "    if len(smi) == 0:\n",
+    "        continue\n",
+    "    mol = Chem.MolFromSmiles(smi)\n",
+    "    if common.is_charged(mol, mol_type='mol') or common.has_separate_components(mol, mol_type='mol') or common.has_isotopes(mol, mol_type='mol') or common.has_unsupported_elems(mol, mol_type='mol') or common.mass_from_smi(smi) > 1500:\n",
+    "        continue\n",
+    "    ikey = Chem.MolToInchi(mol)\n",
+    "    if ikey in ikeys:\n",
+    "        idx = ikeys.index(ikey)\n",
+    "        if ce not in energies[idx]:\n",
+    "            energies[idx].append(ce)\n",
+    "    else:\n",
+    "        mol = common.rm_stereo(mol, mol_type='mol')\n",
+    "        smiles.append(Chem.MolToSmiles(mol))\n",
+    "        ikeys.append(ikey)\n",
+    "        energies.append([ce])\n",
+    "\n",
+    "_, idx = np.unique(ikeys, return_index=True)\n",
+    "smiles = np.array(smiles)[idx].tolist()\n",
+    "energies = [energies[i] for i in idx]\n",
+    "# smiles = common.sanitize(smiles, 'smi')\n",
+    "print(f'length of smiles: {len(smiles)}')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA_VISIBLE_DEVICES=0 /home/roger/miniforge3/envs/ms-main/bin/python src/ms_pred/dag_pred/predict_smis.py \\\n",
+      "               --batch-size 8 \\\n",
+      "               --num-workers 6 \\\n",
+      "               --dataset-labels /home/roger/.cache/ms-pred/iceberg-elucidation/2175ada67dc4949c941e548e0f651216/cands_df_iceberg_elucidation.tsv \\\n",
+      "               --sparse-out \\\n",
+      "               --sparse-k 100 \\\n",
+      "               --max-nodes 100 \\\n",
+      "               --threshold 0.0 \\\n",
+      "               --gen-checkpoint /home/roger/ms-models/iceberg_results_20241111/dag_nist20/split_1_rnd1/version_0/best.ckpt \\\n",
+      "               --inten-checkpoint /home/roger/ms-models/iceberg_results_20241111/dag_inten_nist20/split_1_rnd1/version_1/best.ckpt \\\n",
+      "               --save-dir /home/roger/.cache/ms-pred/iceberg-elucidation/2175ada67dc4949c941e548e0f651216 \\\n",
+      "               --gpu \\\n",
+      "               --adduct-shift\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Global seed set to 42\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-03-19 18:48:01,321 INFO: \n",
+      "adduct_shift: true\n",
+      "batch_size: 8\n",
+      "binned_out: false\n",
+      "dataset_labels: /home/roger/.cache/ms-pred/iceberg-elucidation/2175ada67dc4949c941e548e0f651216/cands_df_iceberg_elucidation.tsv\n",
+      "dataset_name: null\n",
+      "debug: false\n",
+      "gen_checkpoint: /home/roger/ms-models/iceberg_results_20241111/dag_nist20/split_1_rnd1/version_0/best.ckpt\n",
+      "gpu: true\n",
+      "inten_checkpoint: /home/roger/ms-models/iceberg_results_20241111/dag_inten_nist20/split_1_rnd1/version_1/best.ckpt\n",
+      "max_nodes: 100\n",
+      "num_bins: 15000\n",
+      "num_workers: 6\n",
+      "save_dir: /home/roger/.cache/ms-pred/iceberg-elucidation/2175ada67dc4949c941e548e0f651216\n",
+      "seed: 42\n",
+      "sparse_k: 100\n",
+      "sparse_out: true\n",
+      "split_name: split_22.tsv\n",
+      "subset_datasets: none\n",
+      "threshold: 0.0\n",
+      "upper_limit: 1500\n",
+      "\n",
+      "2025-03-19 18:48:01,527 INFO: Loaded gen / inten models from /home/roger/ms-models/iceberg_results_20241111/dag_nist20/split_1_rnd1/version_0/best.ckpt & /home/roger/ms-models/iceberg_results_20241111/dag_inten_nist20/split_1_rnd1/version_1/best.ckpt\n",
+      "2025-03-19 18:48:01,753 INFO: Preparing entries\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 688/688 [00:06<00:00, 109.66it/s]\n",
+      "  0%|          | 0/89 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-03-19 18:48:08,149 INFO: There are 712 entries to process\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 89/89 [00:22<00:00,  3.88it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-03-19 18:48:31,107 INFO: Program finished in: 29.791834592819214 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "enu_config = copy.deepcopy(config)\n",
+    "\n",
+    "result_path, pmz = iceberg_prediction(smiles, energies, **enu_config)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 712/712 [00:00<00:00, 2708.90it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "smiles, pred_specs, pred_frags = load_pred_spec(result_path, False)\n",
+    "meta_spec_list = []\n",
+    "for smi, pred_spec in zip(smiles, pred_specs):\n",
+    "    pmass = common.mass_from_smi(smi) + common.ion2mass['[M+H]+']\n",
+    "    for ev, spec in pred_spec.items():\n",
+    "        spec[:, 1] *= 100\n",
+    "        meta = {\n",
+    "            'PEPMASS': pmass,\n",
+    "            'SMILES': smi,\n",
+    "            'IKEY': common.inchikey_from_smiles(smi),\n",
+    "            'COLLISION_ENERGY': ev,\n",
+    "        }\n",
+    "        meta_spec_list.append((meta, [('spec', spec)]))\n",
+    "\n",
+    "mgf_outstr = common.build_mgf_str(meta_spec_list)\n",
+    "\n",
+    "with open(out_dir / 'foodb_selected_compounds_pred.mgf', 'w') as f:\n",
+    "    f.write(mgf_outstr)\n"
    ],
    "metadata": {
     "collapsed": false
