add more explanations

--- a/notebooks/iceberg_2025_arxiv/iceberg_demo_pubchem_elucidation.ipynb
+++ b/notebooks/iceberg_2025_arxiv/iceberg_demo_pubchem_elucidation.ipynb
@@ -273,7 +273,7 @@
    "cell_type": "markdown",
    "source": [
     "## Visualize and compare ICEBERG predictions\n",
-    "Peaks marked by green are matched by 5ppm, and the ICEBERG-predicted fragment structures and m/z values are visualized"
+    "Peaks marked by green are matched by 5ppm, and the ICEBERG-predicted fragment structures and m/z values are visualized. You can check manually if the structure is a reasonable match to the spectrum of unknown. The spectra are merged from 5 collision energies when plotting (you can also plot them separately by setting ``merge_spec=False`` in config)."
    ],
    "metadata": {
     "collapsed": false
