add adduct type in demo

--- a/notebooks/iceberg_2025_arxiv/iceberg_demo_pubchem_elucidation.ipynb
+++ b/notebooks/iceberg_2025_arxiv/iceberg_demo_pubchem_elucidation.ipynb
@@ -218,7 +218,7 @@
    "execution_count": 7,
    "outputs": [],
    "source": [
-    "result_path, pmz = iceberg_prediction(smiles, [10, 20, 30, 40, 50], **local_config)"
+    "result_path, pmz = iceberg_prediction(smiles, [10, 20, 30, 40, 50], adduct='[M+H]+', **local_config)"
    ],
    "metadata": {
     "collapsed": false
