--- a/notebooks/iceberg_2025_arxiv/iceberg_fig_visual_msms.ipynb
+++ b/notebooks/iceberg_2025_arxiv/iceberg_fig_visual_msms.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plot and visualize peaks"
+    "# Plot and visualize MS/MS"
    ]
   },
   {
